--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,52 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scroll_view"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#222222"
     tools:context=".MainActivity2">
 
-    <TextView
-        android:id="@+id/textView2"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello from activity2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        android:layout_height="match_parent"
+        android:background="#222222">
 
-    <Button
-        android:id="@+id/go_to_layout1_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:text="Back to Layout 1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        <!-- Barra superior con icono, botones y elementos de navegación -->
+        <RelativeLayout
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="#222222">
 
-    <Button
-        android:id="@+id/stickerss_ver_btn"
-        android:layout_width="156dp"
-        android:layout_height="wrap_content"
-        android:text="GET Stickers"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/go_to_layout1_button"
-        app:layout_constraintVertical_bias="0.154" />
+            <!-- Icono de la app -->
+            <ImageView
+                android:id="@+id/app_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/app_icon" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <!-- Botón de casita -->
+            <ImageButton
+                android:id="@+id/home_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/app_icon"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/rounded_background"
+                android:src="@drawable/ic_home"
+                android:contentDescription="TODO" />
+
+            <!-- Botón de martillo -->
+            <ImageButton
+                android:id="@+id/stickers_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/home_button"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/rounded_background"
+                android:src="@drawable/ic_stickers"
+                android:scaleType="fitCenter"
+                android:contentDescription="TODO" />
+
+            <!-- Botón de lupa -->
+            <ImageButton
+                android:id="@+id/search_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/stickers_button"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/rounded_background"
+                android:src="@drawable/ic_search"
+                android:scaleType="fitCenter"
+                android:contentDescription="TODO" />
+
+            <!-- Botón de carrito -->
+            <ImageButton
+                android:id="@+id/download_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/search_button"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/rounded_background"
+                android:src="@drawable/ic_download"
+                android:scaleType="fitCenter"
+                android:contentDescription="TODO" />
+
+            <!-- Botón de usuario -->
+            <ImageButton
+                android:id="@+id/user_info_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/download_button"
+                android:layout_marginLeft="16dp"
+                android:background="@drawable/rounded_background"
+                android:src="@drawable/ic_user_info"
+                android:scaleType="fitCenter"
+                android:contentDescription="TODO" />
+
+        </RelativeLayout>
+
+        <!-- Espacio de imágenes deslizable con enmarcado -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="18dp"
+                android:background="@drawable/rounded_background">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/image_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#222222" />
+
+            </FrameLayout>
+
+        </FrameLayout>
+
+    </RelativeLayout>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
